[package]
name = "pg-dispatcher"
version = "0.2.0"
authors = ["Antônio Roberto <forevertonny@gmail.com>", "Tiago Guimarães <tilacog@gmail.com>"]
edition = "2021"
description = "Listens to a PostgreSQL notification channel and executes a command for each notification"
license = "GPL-3.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
postgres = "0.19"
fallible-iterator = "0.2"