[package]
name = "pg-dispatcher"
version = "0.2.0"
authors = ["Antônio Roberto <forevertonny@gmail.com>", "Tiago Guimarães <tilacog@gmail.com>"]
edition = "2021"
rust-version = "1.74"
description = "Listens to a PostgreSQL notification channel and executes a command for each notification"
license = "GPL-3.0"
repository = "https://github.com/common-group/pg-dispatcher"
readme = "README.md"
keywords = ["postgres", "postgresql", "listen", "notify", "dispatcher"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "pg-dispatcher"
path = "src/main.rs"

[lib]
name = "pg_dispatcher"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
postgres = "0.19"
fallible-iterator = "0.2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }