[package]
name = "pg-dispatcher"
version = "0.3.0"
authors = ["Antônio Roberto <forevertonny@gmail.com>", "Tiago Guimarães <tilacog@gmail.com>"]
edition = "2024"
rust-version = "1.85"
description = "Async PostgreSQL LISTEN/NOTIFY dispatcher that executes a command for each notification"
license = "GPL-3.0"
repository = "https://github.com/common-group/pg-dispatcher"
readme = "README.md"
keywords = ["postgres", "postgresql", "listen", "notify", "dispatcher", "async", "tokio"]
categories = ["command-line-utilities", "database", "asynchronous"]

[[bin]]
name = "pg-dispatcher"
path = "src/main.rs"

[lib]
name = "pg_dispatcher"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros", "process", "io-util", "signal", "rt-multi-thread"] }
tokio-postgres = "0.7"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }